.kubernetes/templates/minio/3.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: '%NAMESPACE%'
  name: %NAMESPACE%-minio
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: %NAMESPACE%-minio-container
  template:
    metadata:
      namespace: '%NAMESPACE%'
      labels:
        app: %NAMESPACE%-minio
        pod: %NAMESPACE%-minio-container
    spec:
      containers:
        - name: %NAMESPACE%-minio
          image: minio/minio:latest
          imagePullPolicy: IfNotPresent
          args: ['server', '/data', '--console-address', ':9001']
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - mountPath: /data
              name: %NAMESPACE%-minio-volume
          resources:
            requests:
              memory: 64Mi
              cpu: 70m
            limits:
              memory: 128Mi
              cpu: 200m
      volumes:
        - name: %NAMESPACE%-minio-volume
          persistentVolumeClaim:
            claimName: %NAMESPACE%-minio-pv-claim
